Mon Jul  5 09:02:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_yield, rb_f_catch): 4th argument to rb_yield_0()
	  is a set of bit flags.  [ruby-dev:23859]

Mon Jul  5 01:27:32  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/drb/drb.rb(DRbConn self.open): If socket pool is full, close
	  the socket whose last-access-time is oldest. (and add new one)
	  [ruby-dev:23860]

Sun Jul  4 12:24:50 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb: added copyright header.

Sun Jul  4 00:24:40 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* added files
	  * lib/soap/attachment.rb
	  * lib/soap/header
	  * lib/soap/mimemessage.rb
	  * lib/soap/rpc/httpserver.rb
	  * lib/wsdl/soap/cgiStubCreator.rb
	  * lib/wsdl/soap/classDefCreator.rb
	  * lib/wsdl/soap/classDefCreatorSupport.rb
	  * lib/wsdl/soap/clientSkeltonCreator.rb
	  * lib/wsdl/soap/driverCreator.rb
	  * lib/wsdl/soap/mappingRegistryCreator.rb
	  * lib/wsdl/soap/methodDefCreator.rb
	  * lib/wsdl/soap/servantSkeltonCreator.rb
	  * lib/wsdl/soap/standaloneServerStubCreator.rb
	  * lib/wsdl/xmlSchema/enumeration.rb
	  * lib/wsdl/xmlSchema/simpleRestriction.rb
	  * lib/wsdl/xmlSchema/simpleType.rb
	  * lib/xsd/codegen
	  * lib/xsd/codegen.rb
	  * sample/soap/authheader
	  * sample/soap/raa2.4
	  * sample/soap/ssl
	  * sample/soap/swa
	  * sample/soap/whois.rb
	  * sample/soap/calc/samplehttpd.conf
	  * sample/soap/exchange/samplehttpd.conf
	  * sample/soap/sampleStruct/samplehttpd.conf
	  * sample/wsdl/raa2.4
	  * sample/wsdl/googleSearch/samplehttpd.conf
	  * test/openssl/_test_ssl.rb
	  * test/soap/header
	  * test/soap/ssl
	  * test/soap/struct
	  * test/soap/swa
	  * test/soap/wsdlDriver
	  * test/wsdl/multiplefault.wsdl
	  * test/wsdl/simpletype
	  * test/wsdl/test_multiplefault.rb

	* modified files
	  * lib/soap/baseData.rb
	  * lib/soap/element.rb
	  * lib/soap/generator.rb
	  * lib/soap/marshal.rb
	  * lib/soap/netHttpClient.rb
	  * lib/soap/parser.rb